--- a/backends/translation-web/core/templates/admin/matcher_change_list.html
+++ b/backends/translation-web/core/templates/admin/matcher_change_list.html
@@ -9,6 +9,6 @@
 <a href="{% url 'admin:core_matcher_bulk_change_category' %}" class="btn btn-success float-right"
    class="historylink"
    title="{% trans 'Change category for all matchers' %}">
-        <i class="fa fa-edit"></i> &nbsp; {% trans "Change category" %}
+        <i class="fa fa-edit"></i> &nbsp; {% trans "Change category (+groups)" %}
 </a>
 {% endblock %}
